[package]
name = "gqlf"
version = "0.1.0"
edition = "2021"
authors = ["The gqlf project developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/gqlf/gqlf"
documentation = ""
homepage = ""
description = """
CLI and server application to manage several custom graphql federation endpoints.
"""
keywords = ["graphql", "federation", "gateway"]
categories = []
include = ["src/", "LICENSE-*", "README.md", "COPYRIGHT"]

[dependencies]
